<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/sonusBackgroundColor">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSplashMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:textColor="?attr/sonusAccentColor"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSplashStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="monospace"
            android:text="@string/sys_init"
            android:textColor="?attr/sonusTextDarkColor"
            android:textSize="12sp"
            android:letterSpacing="0.2" />

        <ProgressBar
            android:id="@+id/pbSplash"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="4dp"
            android:layout_marginTop="24dp"
            android:indeterminate="true"
            android:indeterminateTint="?attr/sonusAccentColor" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSplashVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="32dp"
        android:fontFamily="monospace"
        android:text="@string/build_ver"
        android:textColor="?attr/sonusTextFaintColor"
        android:textSize="10sp" />

</FrameLayout>
